    'promoted' warnings will show up as errors.  You can also pass additional
    'upcoming' warnings via the `Trilinos_ADDITIONAL_WARNINGS` option.  Lastly,
    if either of these modes are enabled, all warnings are disabled for any
    deprecated packages, in the interest of not spending effort cleaning them.
    By default, no warnings or errors are added.


###############################################################################
#                                                                             #
# Trilinos Release 16.0 Release Notes                           July 22, 2024 #
#                                                                             #
###############################################################################

A large number of packages have been marked as deprecated in this release.
We are planning to remove them in the fall of 2025. The list of packages is

  - Amesos
  - AztecOO
  - Epetra
  - EpetraExt
  - Ifpack
  - Intrepid
  - Isorropia
  - ML
  - NewPackage
  - Pliris
  - PyTrilinos
  - ShyLU_DDCore
  - ThyraEpetraAdapters
  - ThyraEpetraExtAdapters
  - Triutils

If you are a user of one of these packages, please transition to the newer
software stack. If you need guidance with finding an adequate replacement
or are missing a particular feature, please open an issue or a discussion
on Github.


Amesos2

  - Add interface to MKL cluster sparse solver.
    https://github.com/trilinos/Trilinos/pull/13073


Framework

  - Marked all deprecated packages as 'Secondary Tested'.
  - Reset default for `Trilinos_ENABLE_SECONDARY_TESTED_CODE` to `OFF`.
    This will cause the previously-mentioned deprecated packages to NOT be
    automatically enabled to help guide users away from them.  The old
    behavior can be restored by setting the variable back to `ON`, but note
    that the recommended best practice is to explicitly enable packages that
    the user is depending on (e.g. if you depend on ThyraEpetraAdapters, enable